tests/macros/float/choices.stderr
error: option `choices` does not exist for kind `float`
 --> $DIR/choices.rs:2:37
  |
2 |     inquisition::questions![Float { choices: todo!() }];
  |                                     ^^^^^^^
