tests/macros/float/choices.rs
fn main() {
    inquisition::questions![Float { choices: todo!() }];
}
